fixed link issue with mentor -> div box was overflowing

--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 .left {
-    align-content: center;
-    position: relative;
-    left: 11%;
+    padding-left: 11%;
+    /* position: relative; */
+    /* left: 11%; */
 }
 
 
